salesforce/metadata/objects/MSD_Schedule__c.object
<CustomObject>
    <label>MSD Schedule</label>
    <nameField>
        <displayFormat>SCH-{0000}</displayFormat>
        <label>Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSD Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetSystem__c</fullName>
        <label>Target System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connector</label>
        <referenceTo>MSD_Connector__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSD_MappingDefinition__c</fullName>
        <label>Mapping Definition (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MSD_Direction__c</fullName>
        <label>Direction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_SourceType__c</fullName>
        <label>Source Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_TargetType__c</fullName>
        <label>Target Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SALESFORCE</fullName>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>MSSQL</fullName>
                </value>
                <value>
                    <fullName>ORACLE</fullName>
                    <label>Oracle</label>
                </value>
                <value>
                    <fullName>MOCK</fullName>
                    <label>Mock</label>
                </value>
                <value>
                    <fullName>SAGE100</fullName>
                    <label>Sage100</label>
                </value>
                <value>
                    <fullName>SALESFORCE_GLOBAL_PICKLIST</fullName>
                    <label>Salesforce Global Picklist</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSD_SourceDefinition__c</fullName>
        <label>Source Definition (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MSD_TargetDefinition__c</fullName>
        <label>Target Definition (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BatchSize__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextRunAt__c</fullName>
        <label>Next Run At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastRunAt__c</fullName>
        <label>Last Run At</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>ObjectName__c</columns>
        <columns>Operation__c</columns>
        <columns>NextRunAt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Schedules</label>
    </listViews>
</CustomObject>